--- a/src/pagesAdmin/Workers/Workers.module.scss
+++ b/src/pagesAdmin/Workers/Workers.module.scss
@@ -24,7 +24,7 @@
   .workersBtn {
     display: flex;
     align-items: center;
-    width: 1245px;
+    max-width: 1245px;
     padding-bottom: 24px;
     border-bottom: 1px solid rgba(244, 244, 244, 80%);
   }
