--- a/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
@@ -101,16 +101,19 @@ h2 {
   //field-sizing: content;
   color: white;
   margin-bottom: 12px;
-  &:enabled {
+  &:enabled{
     background: #f4f4f405;
   }
 
   &:disabled {
     cursor: default;
+    background: none;
+    
   }
-  &:enabled {
-    background: #f4f4f405;
-  }
+  &.editableField {
+    background:  rgb(54, 12, 94);
+  }background: #f4f4f405;
+  
 }
 .divider {
   width: 100%;
