--- a/src/pagesAdmin/Workers/WorkerPage/WokerPage.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WokerPage.module.scss
@@ -2,9 +2,9 @@
   max-width: 80vw;
   display: flex;
   flex-direction: row;
-  margin-left: 40px;
+  margin-left: 20px;
   justify-content: space-around;
-  gap: 2%;
+  gap: 54px;
 }
 .workerSection {
   display: flex;
