--- a/src/pagesAdmin/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
+++ b/src/pagesAdmin/Workers/WorkerPage/WorkerInitial/WorkerInitial.module.scss
@@ -49,7 +49,9 @@
   top: 20px;
   margin-left: 500px;
   color: white;
-}
+  font-size: 16px;
+
+  }
 
 .hidden {
   display: none; // Стиль для скрытия элемента
