--- a/src/pagesWorker/MyPage/WorkerAchievements/WorkerAchievements.module.scss
+++ b/src/pagesWorker/MyPage/WorkerAchievements/WorkerAchievements.module.scss
@@ -1,9 +1,9 @@
 .workerAchievements {
 
   visibility: inherit;
-  max-width: 700px;
+  max-width: 780px;
   h1{
-    font-size: 40px;
+    font-size: 36px;
     position: relative;
     left: 20px;
   }
@@ -35,10 +35,11 @@
   overflow-x: hidden;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(230px, 1fr));
+  grid-gap: 15px;
   width: 100%;
   max-width: 780px;
-  margin: 30px;
-  
+  height: 650px;
+  margin: 20px;
 }
 
 .achievementCard {
