--- a/src/components/NavigationMenu/NavigationMenu.scss
+++ b/src/components/NavigationMenu/NavigationMenu.scss
@@ -41,6 +41,7 @@ nav {
       display: flex;
       align-items: center;
       padding: 12px 18px;
+      margin-right: 16px;
       border-radius: 16px;
       text-decoration: none;
       color: #fff;
@@ -49,7 +50,6 @@ nav {
       font-size: 16px;
       font-weight: 500;
       line-height: 20px;
-      margin-right: 16px;
       cursor: pointer;
       transition: background-color 0.3s, transform 0.3s;
 
@@ -77,6 +77,9 @@ nav {
     align-items: center;
     justify-content: center;
     text-align: center;
+    cursor: pointer;
+    // padding: 12px 18px;
+    // margin-right: 16px;
 
     img {
       width: 48px;
@@ -87,7 +90,7 @@ nav {
 
     h1 {
       margin: 0;
-      margin-top: -5px;
+      margin-top: 2px;
       width: 100%;
       text-align: center;
       font-size: 18px;
