--- a/src/pagesAdmin/PrivacySettings/ChangePassword.module.scss
+++ b/src/pagesAdmin/PrivacySettings/ChangePassword.module.scss
@@ -1,30 +1,64 @@
 .changePasswordForm {
-    display: flex;
-    flex-direction: column;
-    max-width: 300px;
-    margin-top: 20px;
-  
+  display: flex;
+  flex-direction: column;
+  max-width: 300px;
+  margin-bottom: 20px;
+
+  div {
+    margin-bottom: 10px;
+
     label {
       margin-bottom: 10px;
+      font-size: 14px;
+      line-height: 20px;
     }
-  
+
     input {
       width: 100%;
       padding: 8px;
       margin-top: 5px;
+      border-radius: 8px;
     }
-  
+    .passwordCurrentToggle {
+      position: absolute;
+      right: 90px;
+      top: 207px;
+      transform: translateY(-50%);
+      cursor: pointer;
+    }
+    .passwordNewToggle {
+      position: absolute;
+      right: 90px;
+      top: 281px;
+      transform: translateY(-50%);
+      cursor: pointer;
+    }
+  }
+
+  .changePasswordButton {
+    display: flex;
+    justify-content: center;
+
     button {
+      display: flex;
+      justify-content: center;
       padding: 10px;
-      background-color: #007bff;
+      margin-top: 10px;
       color: white;
       border: none;
       cursor: pointer;
-      margin-top: 20px;
-  
+      font-size: 14px;
+      line-height: 20px;
+      width: 170px  ;
+      background-color: #6A11C3;
+      transition:
+        background-color 0.3s,
+        transform 0.3s;
       &:hover {
-        background-color: #0056b3;
+        border: none;
+        opacity: 1;
+        transform: scale(1.05);
       }
     }
   }
-  
+}
