--- a/src/pagesAdmin/PrivacySettings/PrivacySettings.module.scss
+++ b/src/pagesAdmin/PrivacySettings/PrivacySettings.module.scss
@@ -1,17 +1,107 @@
+
+@import "@/styles/configcss.scss";
+
+.modalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1000; /* Выше всех остальных элементов */
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6); /* Чёрный полупрозрачный фон основного окна */
+}
+
 .userSettingsPage {
+  position: fixed;    //position: relative;
+  top: 20px;
+  right: 20px;
+  z-index: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 450px;
+  max-width: 100%;
+  // height: 450px;
+  padding: 20px;
+  border-radius: 16px;
+  background: linear-gradient(160deg, rgba(40,1,79,1) 0%, rgba(84,20,148,1) 99%); /* фон контента */
+  box-sizing: border-box;
+  transition: height 0.3s ease;
+   
+  .closeButton {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: transparent;
+    border: none;
+    font-size: 1.5rem;
+    color: white;
+    cursor: pointer;
+  }
+
+  .userSettingsTitle {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-  
+    flex-direction: row;
+    flex-wrap: wrap;
+    .userSettingsImg {
+      width: 40px; 
+      height: 40px; 
+      margin-right: 10px; 
+      margin-top: 7px;
+    }
     h1 {
       margin-bottom: 20px;
     }
   }
-  
+
   .userFullName {
     font-size: 1.5rem;
     font-weight: bold;
     margin-bottom: 10px;
   }
-  
+
+  .buttonsGroup {
+    display: flex;
+    flex-direction: column;
+
+    button {
+      display: flex;
+      margin-bottom: 10px;
+      margin-top: 20px;
+      width: 340px;
+      height: 50px; 
+      border-radius: 10px;
+      align-items: center;
+      cursor: pointer;
+      background: rgba(209, 211, 212, 0.2);
+      border: 1px solid #f4f4f414;
+      color: #f4f4f4;
+      transition: background 0.3s ease;
+
+      &:hover {
+        background: rgba(101, 9, 240, 0.32);
+        border: 1px solid white;
+        color: white;
+        opacity: 0.8;
+      }
+
+      .buttonIcon {
+        margin-bottom: 3px;
+      }
+      .buttonText {
+        padding-left: 15px;
+        align-items: center;
+        text-align: center;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 20px;
+
+      }
+    }
+  }
+
+
+}
+
+
+
