--- a/src/pagesAdmin/PrivacySettings/ChangePassword.module.scss
+++ b/src/pagesAdmin/PrivacySettings/ChangePassword.module.scss
@@ -49,7 +49,7 @@
       cursor: pointer;
       font-size: 14px;
       line-height: 20px;
-      width: 170px  ;
+      width: 170px;
       background-color: #6A11C3;
       transition:
         background-color 0.3s,
@@ -58,6 +58,13 @@
         border: none;
         opacity: 1;
         transform: scale(1.05);
+      }
+      //временно заблокирована - API нет:
+      &:disabled {
+        width: 170px;
+        cursor: not-allowed;
+        background-color: #6A11C3;
+        opacity: 0.4;
       }
     }
   }
