--- a/src/pagesWorker/PrivacySettings/ChangePassword.module.scss
+++ b/src/pagesWorker/PrivacySettings/ChangePassword.module.scss
@@ -59,6 +59,13 @@
         opacity: 1;
         transform: scale(1.05);
       }
+      //временно заблокирована - API нет:
+      &:disabled {
+        width: 170px;
+        cursor: not-allowed;
+        background-color: #6A11C3;
+        opacity: 0.4;
+      }
     }
   }
 }
