--- a/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
+++ b/src/pagesWorker/MyPage/WorkerData/WorkerData.module.scss
@@ -16,9 +16,11 @@
 }
 
 .editIcon {
+  width: 80%;
+  height: 80%;
   position: absolute;
   top: 50%;
-  left: 50%;
+  left: 60%;
   transform: translate(-50%, -50%);
   color: white;
   border-radius: 50%;
