--- a/src/pagesWorker/PrivacySettings/PrivacySettings.module.scss
+++ b/src/pagesWorker/PrivacySettings/PrivacySettings.module.scss
@@ -84,13 +84,13 @@
         color: white;
         opacity: 0.8;
       }
-      //временно заблокирована:
-      &:disabled {
-        width: 340px;
-        cursor: not-allowed;
-        background: rgba(209, 211, 212, 0.2);
-        opacity: 0.4;
-      }
+      // //временно заблокирована:
+      // &:disabled {
+      //   width: 340px;
+      //   cursor: not-allowed;
+      //   background: rgba(209, 211, 212, 0.2);
+      //   opacity: 0.4;
+      // }
 
       .buttonIcon {
         margin-bottom: 3px;
@@ -107,8 +107,27 @@
     }
   }
 
-
+  .helpContent {
+    margin-bottom: 30px;
+    text-align: center;
+    color: white;
+    font-size: 14px;
+    .email {
+      text-decoration: underline;
+      cursor: copy;
+      &:hover {
+        text-decoration: underline;
+        color: #00f;
+      }
+    }
+    .copiedMessage {
+      margin-top: 10px;
+      font-size: 12px;
+      color: #FFA91A;
+    }
+  }
 }
+
 
 
 
